--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>2048 Game</title>
+    <a href="index.html" download>
+        Download 2048
+    </a>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
